--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
-  "homepage": "http://JBrendon15.github.io/Book-Search-Engine"
+  "homepage": "http://JBrendon15.github.io/Book-Search-Engine",
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
